--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,22 +1,16 @@
 .header{
-    display: flex;
-    flex:0;
-    justify-content: center;
-    align-items: center;
-    top: 0;
     background-color: lightslategrey !important ;
     height:10vh;
     width: 100%;
     position: fixed;
-
+    top: 0;
     margin-left: 0%;
-    padding-top: 30%;
-  
 }
 .row{
     display: flex !important;
     flex-direction: row!important;
     justify-content: space-around!important;
-    align-items:left!important;
+    align-items: center!important;
     flex-wrap: wrap!important;
+    
 }
