--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,15 @@
-<div class="header">
- 
+<div class="toolbar">
+  <div class="row">
+    <div class="col-4">Sim1</div>
+    <div class="col-4">Sim2</div>
+    <div class="col-4">Wifi</div>
+  </div>
+  <div class="spacer"></div>
+
+  <div class="row">
+    <div class="col-6">
+      {{_time}}
+      <p>{{_date}}</p>
+    </div>
+  </div>
 </div>
-<router-outlet></router-outlet>
